[gd_scene load_steps=43 format=3 uid="uid://clksk0pxgun1g"]

[ext_resource type="Script" path="res://Scripts/Enemies/AI Melee/EnemyM.gd" id="1_68476"]
[ext_resource type="Script" path="res://Scripts/Enemies/State Machine/StateMachine.gd" id="2_weqyc"]
[ext_resource type="Texture2D" uid="uid://l21txhibwoc6" path="res://Assets/SGQ_Enemies/normal/16x16/bat.png" id="3_nyoe5"]

[sub_resource type="Animation" id="Animation_wqhjt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_detector/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i7k4i"]
resource_name = "attack_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_detector/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_h7huk"]
resource_name = "attack_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_detector/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_sq3d5"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 15]
}

[sub_resource type="Animation" id="Animation_e45q6"]
resource_name = "hit_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 20]
}

[sub_resource type="Animation" id="Animation_my3j8"]
resource_name = "hit_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 16]
}

[sub_resource type="Animation" id="Animation_ougqq"]
resource_name = "move_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_up3v2"]
resource_name = "move_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bk8x6"]
_data = {
"RESET": SubResource("Animation_wqhjt"),
"attack_left": SubResource("Animation_i7k4i"),
"attack_right": SubResource("Animation_h7huk"),
"death": SubResource("Animation_sq3d5"),
"hit_left": SubResource("Animation_e45q6"),
"hit_right": SubResource("Animation_my3j8"),
"move_left": SubResource("Animation_ougqq"),
"move_right": SubResource("Animation_up3v2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5o4b"]
size = Vector2(11, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_eelx2"]
radius = 69.0072

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eniej"]
size = Vector2(15, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrlmg"]
size = Vector2(15, 11)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vu80s"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4nsmx"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_yngmw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vu80s")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_4nsmx")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g6k3n"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ujm2l"]
animation = &"hit_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ndhpd"]
animation = &"hit_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_2j67s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ujm2l")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ndhpd")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_86wc8"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e5pmg"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ovwmo"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_66csp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e5pmg")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ovwmo")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cbj3b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qn133"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tv3in"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mx1ur"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lfsvd"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gjg8y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i74hi"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1j42g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oqem3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mnu54"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e53d2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yr86l"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4suui"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iblt0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lsrxg"]
states/Attack/node = SubResource("AnimationNodeBlendSpace1D_yngmw")
states/Attack/position = Vector2(514, 205)
states/Death/node = SubResource("AnimationNodeAnimation_g6k3n")
states/Death/position = Vector2(749, 379)
states/End/position = Vector2(878, 379)
states/Hit/node = SubResource("AnimationNodeBlendSpace1D_2j67s")
states/Hit/position = Vector2(514, 379)
states/Idle/node = SubResource("AnimationNodeAnimation_86wc8")
states/Idle/position = Vector2(358, 105)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_66csp")
states/Move/position = Vector2(687, 105)
states/Start/position = Vector2(220, 106)
transitions = ["Hit", "Death", SubResource("AnimationNodeStateMachineTransition_cbj3b"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_qn133"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_tv3in"), "Attack", "Hit", SubResource("AnimationNodeStateMachineTransition_mx1ur"), "Hit", "Attack", SubResource("AnimationNodeStateMachineTransition_lfsvd"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_gjg8y"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_i74hi"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_1j42g"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_oqem3"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_mnu54"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_e53d2"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_yr86l"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_4suui"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_iblt0")]
graph_offset = Vector2(-47, -22.0248)

[node name="Enemy1" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_68476")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_weqyc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_nyoe5")
hframes = 4
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_bk8x6")
}
autoplay = "move_right"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_m5o4b")

[node name="chase_detection" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="chase_detection"]
shape = SubResource("CircleShape2D_eelx2")

[node name="attack_detection" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_detection"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_eniej")

[node name="damage_detector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_detector"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_lrlmg")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_lsrxg")
anim_player = NodePath("../Sprite2D/AnimationPlayer")
parameters/Attack/blend_position = 0
parameters/Hit/blend_position = 0
parameters/Move/blend_position = 0

[connection signal="body_entered" from="chase_detection" to="." method="_on_chase_detection_body_entered"]
[connection signal="body_exited" from="chase_detection" to="." method="_on_chase_detection_body_exited"]
[connection signal="body_entered" from="attack_detection" to="." method="_on_attack_detection_body_entered"]
[connection signal="body_exited" from="attack_detection" to="." method="_on_attack_detection_body_exited"]
[connection signal="body_entered" from="damage_detector" to="." method="_on_damage_detector_body_entered"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
